--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Dashboard">
+        <activity android:name=".Dashboard" android:label="Dashbaord">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
