--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Calculator" android:label="Calculator"></activity>
+        <activity android:name=".ConstraintLayout"></activity>
+        <activity android:name=".RelativeLinear" />
+        <activity
+            android:name=".Calculator"
+            android:label="Calculator" />
         <activity
             android:name=".Dashboard"
             android:label="Dashbaord">
@@ -19,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
