--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".ConstraintLayout"></activity>
+        <activity android:name=".PutExtraData"></activity>
+        <activity android:name=".StickyButtons" />
+        <activity android:name=".ConstraintLayout" />
         <activity android:name=".RelativeLinear" />
         <activity
             android:name=".Calculator"
